--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "Backend for the full stack web app ToDo List.",
   "main": "server.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production node server.js"
-
+    "start": "cross-env NODE_ENV=production node backend/server.js",
+    "dev": "cross-env NODE_ENV=development nodemon backend/server.js",
+    "server": "nodemon backend/server.js",
+    "client": "npm start --prefix frontend",
+    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
+    
   },
   "author": "Sneha Yadav",
   "license": "MIT",
